<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_quote_subject"
        android:title="@string/quote_subject"
        android:icon="@drawable/ic_menu_cc" />
    <item
        android:id="@+id/menu_copy"
        android:title="@string/copy_to_clipboard"
        android:icon="@drawable/ic_menu_copy_holo_dark" />
    <item
        android:id="@+id/menu_post_comment"
        android:title="@string/post_comment"
        android:icon="@drawable/ic_menu_start_conversation" />

    <item
        android:id="@+id/menu_edit"
        android:title="@string/edit"
        android:icon="@drawable/icon_menu_eraser" />
    <item
        android:id="@+id/menu_report"
        android:title="@string/report" />

    <item
        android:id="@+id/menu_send_message"
        android:title="@string/send_message" />

    <item
        android:id="@+id/menu_avatar"
        android:title="@string/avatar_dialog" />
    <item
        android:id="@+id/menu_signature"
        android:title="@string/signature_dialog" />
    <item
        android:id="@+id/menu_vote"
        android:title="@string/vote_dialog" />

    <item
        android:id="@+id/menu_show_profile"
        android:title="@string/showprofile" />
    <item
        android:id="@+id/menu_show_this_person_only"
        android:title="@string/show_this_person_only" />
    <item
        android:id="@+id/menu_ban_this_one"
        android:title="@string/ban_thisone" />
    <item
        android:id="@+id/menu_search_post"
        android:title="@string/search_post" />
    <item
        android:id="@+id/menu_search_subject"
        android:title="@string/search_subject" />

</menu>