<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/quote_subject" android:title="@string/quote_subject" android:icon="@drawable/ic_menu_cc"></item>
	<item android:id="@+id/show_whole_thread" android:title="@string/show_whole_thread" android:icon="@drawable/ic_action_storage"></item>
    <item android:id="@+id/search_subject" android:title="@string/search_subject"></item>
    <item android:id="@+id/search_post" android:title="@string/search_post"></item>
    <item android:id="@+id/send_message" android:title="@string/send_message" android:showAsAction="never"></item>
    <item android:id="@+id/ban_thisone" android:title="@string/ban_thisone"></item>
    <item android:id="@+id/show_profile" android:title="@string/showprofile"></item>
    <item android:id="@+id/vote_dialog" android:title="@string/vote_dialog"></item>
    <item android:id="@+id/item_share" android:title="@string/share" android:icon="@drawable/ic_menu_share_holo_dark"></item>
    
    

</menu>