<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/quote_subject" android:title="@string/quote_subject" android:icon="@drawable/ic_menu_cc"></item>
    <item android:id="@+id/copy_to_clipboard" android:title="@string/copy_to_clipboard" android:icon="@drawable/ic_menu_copy_holo_dark"></item><item android:id="@+id/item_share" android:title="@string/share" android:icon="@drawable/ic_menu_share_holo_dark"></item><item android:id="@+id/post_comment" android:title="@string/post_comment" android:icon="@drawable/ic_menu_start_conversation"></item>
    
    
    <item android:id="@+id/edit" android:title="@string/edit" android:icon="@drawable/content_edit"></item><item android:id="@+id/report" android:title="@string/report"></item><item android:id="@+id/show_this_person_only" android:title="@string/show_this_person_only"></item>
    <item android:id="@+id/search_post" android:title="@string/search_post"></item>
    <item android:id="@+id/search_subject" android:title="@string/search_subject"></item>
    
    
    

</menu>