<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidnga="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/article_menuitem_reply"
        android:icon="@drawable/content_edit"
        android:title="@string/reply_thread"
        androidnga:showAsAction="ifRoom" />
    <item
        android:id="@+id/article_menuitem_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        androidnga:showAsAction="ifRoom" />
    <item
        android:id="@+id/goto_floor"
        android:icon="@drawable/ic_menu_goto"
        android:title="@string/goto_floor" />
    <item
        android:id="@+id/article_menuitem_addbookmark"
        android:icon="@drawable/btn_star_big_on"
        android:title="@string/bookmark"
        androidnga:showAsAction="ifRoom" />
    <item
        android:id="@+id/night_mode"
        android:icon="@drawable/ic_action_bightness_low"
        android:title="@string/change_night_mode"
        androidnga:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_share"
        android:icon="@drawable/ic_menu_share_holo_dark"
        android:title="@string/share" />
    <item
        android:id="@+id/article_menuitem_lock"
        android:icon="@drawable/ic_lock_screen"
        android:title="@string/lock_orientation"
        androidnga:showAsAction="ifRoom" />
    <item
        android:id="@+id/article_menuitem_back"
        android:icon="@drawable/ic_exit"
        android:title="@string/close" />
</menu>