<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidnga="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add_bookmark"
        android:icon="@drawable/btn_ic_star_off"
        android:title="@string/menu_add_bookmark_board"
        androidnga:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_remove_bookmark"
        android:icon="@drawable/btn_ic_star_on"
        android:title="@string/menu_remove_bookmark_board"
        androidnga:showAsAction="ifRoom" />
    <item
        android:id="@+id/goto_bookmark_item"
        android:icon="@drawable/ic_bookmark"
        android:showAsAction="ifRoom"
        android:title="@string/goto_bookmark"
        androidnga:showAsAction="ifRoom"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/action_search"
        android:showAsAction="ifRoom"
        android:title="@string/search"
        androidnga:showAsAction="ifRoom"/>
    <item
        android:id="@+id/night_mode"
        android:icon="@drawable/ic_action_bightness_low"
        android:showAsAction="never"
        android:title="@string/change_night_mode"
        androidnga:showAsAction="never"/>
    <item
        android:id="@+id/threadlist_menu_item2"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        androidnga:showAsAction="always"/>
    <item
        android:id="@+id/threadlist_menu_newthread"
        android:icon="@drawable/content_edit"
        android:title="@string/new_thread"
        androidnga:showAsAction="ifRoom"/>


</menu>
