<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidnga="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_goto_floor"
        android:icon="@drawable/ic_menu_goto"
        android:title="@string/goto_floor"
        androidnga:showAsAction="never" />
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        androidnga:showAsAction="always" />
    <item
        android:id="@+id/menu_reply"
        android:icon="@drawable/content_edit"
        android:title="@string/reply_thread"
        androidnga:showAsAction="always" />

    <item
        android:id="@+id/menu_copy_url"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_copy_url"
        androidnga:showAsAction="never" />

    <item
        android:id="@+id/menu_add_bookmark"
        android:icon="@drawable/btn_star_big_on"
        android:title="@string/bookmark"
        androidnga:showAsAction="never" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_menu_share_holo_dark"
        android:title="@string/share"
        androidnga:showAsAction="never" />
</menu>