<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:androidnga="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/article_menuitem_reply"  android:title="@string/reply_message" android:icon="@drawable/content_edit" androidnga:showAsAction="ifRoom" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/article_menuitem_refresh"  android:title="@string/refresh" android:icon="@drawable/ic_refresh" androidnga:showAsAction="ifRoom" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/article_menuitem_back"  android:title="@string/close" android:icon="@drawable/ic_exit"></item>
    <item android:id="@+id/night_mode"  android:icon="@drawable/ic_action_bightness_low" android:title="@string/change_night_mode" androidnga:showAsAction="ifRoom" android:showAsAction="ifRoom"></item>
    
    
    

</menu>