<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidnga="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_add_bookmark"
        android:icon="@drawable/btn_ic_star_off"
        android:title="@string/menu_add_bookmark_board"
        androidnga:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_remove_bookmark"
        android:icon="@drawable/btn_ic_star_on"
        android:title="@string/menu_remove_bookmark_board"
        androidnga:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/btn_ic_search"
        android:title="@string/menu_search"
        androidnga:showAsAction="ifRoom" />

    <item
        android:id="@+id/goto_bookmark_item"
        android:icon="@drawable/btn_ic_collections"
        android:title="@string/menu_bookmark_post"
        androidnga:showAsAction="ifRoom" />


</menu>
