<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidnga="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/upload"
        android:icon="@drawable/ic_menu_upload"
        android:orderInCategory="4"
        android:title="@string/upload"
        androidnga:showAsAction="ifRoom"/>
    <item
        android:id="@+id/supertext"
        android:icon="@drawable/ic_action_supertext"
        android:orderInCategory="3"
        android:title="@string/richtext"
        androidnga:showAsAction="ifRoom"/>
    <item
        android:id="@+id/emotion"
        android:icon="@drawable/ic_action_new_emotion"
        android:orderInCategory="2"
        android:title="@string/emotion"
        androidnga:showAsAction="ifRoom"/>
    <item
        android:id="@+id/send"
        android:icon="@drawable/ic_menu_send"
        android:orderInCategory="1"
        android:title="@string/commit"
        androidnga:showAsAction="ifRoom"/>
</menu>
