<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:androidnga="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_send_message"
        android:icon="@drawable/btn_ic_mail"
        android:title="@string/menu_send_msg"
        androidnga:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_search_post"
        android:icon="@drawable/btn_ic_search"
        android:title="@string/menu_search_post"
        androidnga:showAsAction="never" />

    <item
        android:id="@+id/menu_modify_avatar"
        android:icon="@drawable/btn_ic_search"
        android:title="修改头像"
        androidnga:showAsAction="never" />


    <item
        android:id="@+id/menu_search_reply"
        android:icon="@drawable/btn_ic_search"
        android:title="@string/menu_search_reply"
        androidnga:showAsAction="never" />


</menu>

